# Thesis_19783400

./: CMakeLists.txt  Kconfig  LICENCE  LICENCE.md
Client/: CMakeLists.txt  Kconfig  west.yml
Client/boards/: sam_e70_xplained.overlay
Client/conf/: prj.conf
Client/src/: main.c
Server/: CMakeLists.txt  Kconfig  west.yml
Server/boards/: sam_e70_xplained.overlay
Server/src/: main.c  old code.txt
boards/: sam_e70_xplained.overlay
boards/sam_e70_xplained/: same70q21b.conf
boards/sam_v71_xult/: samv71q21.conf  samv71q21.overlay
conf/: prj.conf
log/: latest_list
src/: main.c
trial/conf/: prj.conf
trial/src/: main.c
